[project]
name = "pulse-backend"
version = "0.1.0"
dependencies = [
    "litestar[pydantic,jwt,sqlalchemy,standard]",
    "asyncpg",
    "bcrypt",
]

[project.optional-dependencies]
lint = [
    "ruff",
    "mypy",
    "types-python-jose",
    "pylint",
    "pylint-pydantic",
]

[tool.pip-tools]
generate-hashes = true

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    # "N",  # pep8-naming
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "T20",  # flake8-print
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLOT",  # flake8-slots
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ERA",  # eradicate
    "RUF",  # RUF
]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pylint.main]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
load-plugins = ["pylint_pydantic"]
py-version = "3.12"
