[project]
name = "pulse-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litestar[pydantic,jwt,sqlalchemy,standard]",
    "asyncpg",
    "bcrypt",
]

[tool.pdm.dev-dependencies]
lint = [
    "ruff",
    "mypy",
    "types-python-jose",
    "pylint",
    "pylint-pydantic",
]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",  # Pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle
    "C90",  # mccabe
    "I",  # isort
    # "N",  # pep8-naming
    "UP",  # pyupgrade
    "S",  # flake8-bandit
    "B",  # flake8-bugbear
    "A",  # flake8-builtins
    "T20",  # flake8-print
    "PT",  # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLOT",  # flake8-slots
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ERA",  # eradicate
    "RUF",  # RUF
]

[tool.ruff.lint.isort]
known-first-party = ["pulse_backend"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pylint.main]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
]
load-plugins = ["pylint_pydantic"]
py-version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
