[project]
name = "pulse-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "litestar[pydantic,jwt,sqlalchemy,standard]",
    "asyncpg",
    "bcrypt",
]

[tool.pdm.dev-dependencies]
lint = [
    "ruff",
    "mypy",
    "types-python-jose",
    "pylint",
    "pylint-pydantic",
]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ruff formatter compatibility
    "W191",
    "E111", "E114", "E117",
    "D206", "D300",
    "Q000", "Q001", "Q002", "Q003",
    "COM812", "COM819",
    "ISC001", "ISC002",
    # Conflicts
    "D203", "D213",
    # Allow missing docstrings
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Other ignores
    "TD002",  # missing-todo-author
    "TD003",  # missing-todo-link
]

[tool.ruff.lint.isort]
known-first-party = ["pulse_backend"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
